Fix build scripts, make treeview-item visible

--- a/resources/todomvc/big-dom-generator/src/app.css
+++ b/resources/todomvc/big-dom-generator/src/app.css
@@ -49,7 +49,7 @@ Importing the CSS from the Spectrum CSS library.
 @spectrum-css overrides
 */
 
-.spectrum-TreeView-itemLink {
+.spectrum-TreeView-item, .spectrum-TreeView-itemLink {
     overflow: visible;
 }
 
